# scifinames

./: .flake8  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  quality.yml
scifinames/: __init__.py  star_wars.py
tests/: test_star_wars.py
