[tool.poetry]
name = "scifinames"
version = "0.1.0"
description = ""
authors = ["Morgan Jones <morgan.jones@veygo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
