[tool.poetry]
name = "scifinames"
version = "0.1.0"
description = ""
authors = ["Morgan Jones <morgan.jones@veygo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flake8 = "^6.1.0"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
